--- a/src/app/core/sidebar/sidebar.component.scss
+++ b/src/app/core/sidebar/sidebar.component.scss
@@ -53,14 +53,14 @@ a:focus {
     MEDIAQUERIES
 ----------------------------------------------------- */
 
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: - 300px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-    #sidebarCollapse span {
-        display: none;
-    }
-}
+// @media (max-width: 768px) {
+//     #sidebar {
+//         margin-left: - 300px;
+//     }
+//     #sidebar.active {
+//         margin-left: 0;
+//     }
+//     #sidebarCollapse span {
+//         display: none;
+//     }
+// }
