--- a/src/app/profile/component/profile-list/profile-list.component.scss
+++ b/src/app/profile/component/profile-list/profile-list.component.scss
@@ -31,6 +31,9 @@
 }
 
 .text-color {
-    color: #808080;
+    color: #797979;
 }
 
+.overflow-auto {
+    overflow: auto;
+}
