--- a/src/styles.scss
+++ b/src/styles.scss
@@ -182,11 +182,11 @@ a {
 
 #checkmark ~ #sidebar {
     #sidebar.active {
-        margin-left: -250px;
+        margin-left: -200px;
     }
     #sidebar {
-        min-width: 300px;
-        max-width: 300px;
+        min-width: 25%;
+        max-width: 25%;
         background: white;
         color: #000000;
         transition: all 0.3s;
@@ -223,7 +223,7 @@ a {
                 }
 
                 &-3 {
-                    transform: translateY(-6px) rotate(45deg);
+                    transform: translateY(-6px) rotate(225deg);
                 }
             }
         }
@@ -231,7 +231,7 @@ a {
 }
 
 #checkmark:checked ~ #sidebar {
-    // flex: 0 0 50px;
+    flex: 0 0 50px;
     .sidebar-header {
         .checkmark-label {
             .line {
@@ -249,11 +249,6 @@ a {
                 }
             }
         }
-    }
-
-    .nav-link-text,
-    .title-text {
-        transform: translateX(100%);
     }
 
 }
@@ -337,6 +332,34 @@ a.article:hover {
 // END: Sidebar Styles
 ////////////////////////////////////////////////////////////////////////
 
+
+// START: Scrollbar Styles
+////////////////////////////////////////////////////////////////////////
+
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #979597 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #979597;
+    border-radius: 15px;
+    border: 6px solid #ffffff;
+  }
+
+  // END: Sidebar Styles
+////////////////////////////////////////////////////////////////////////
+
+
 %border-radius {
     border-radius: 8px;
 }
@@ -411,6 +434,19 @@ table th {
     width: 350px;
 }
 
+.form-control-1,
+.form-select-1 {
+    font-family: "Poppins", sans-serif;
+    font-size: 0.75rem;
+    border: 1px solid $border-color;
+    @extend %border-radius;
+    padding: 0 0.5rem;
+    height: 40px;
+    outline: none;
+    display: block;
+    width: 165px;
+}
+
 .form-label {
     font-family: "Poppins", sans-serif;
     font-size: 1rem;
@@ -423,3 +459,5 @@ table th {
 .text-danger {
     color: $danger-color;
 }
+
+
